--- a/app/assets/stylesheets/arctic_admin/layouts/_sidebar.scss
+++ b/app/assets/stylesheets/arctic_admin/layouts/_sidebar.scss
@@ -1,7 +1,7 @@
 .header #tabs {
   width: $header-width;
   height: calc(100% - 60px);
-  position: fixed;
+//   position: fixed;
   top: 50px;
   background-color: $sidebar-background;
   border-right: 1px solid $sidebar-border-color;
